updated GROQ API

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GROQ_API_KEY= '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'
+GROQ_API_KEY=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
